seguimos con el diseño

--- a/index.html
+++ b/index.html
@@ -10,42 +10,43 @@
   </head>
   <body id="bodyImg">
     <aside id="start">
-      <section class="first">
-        <img src="logo.svg">
-        <p>Bienvenida al juego<br>de tu natalicio.</p>
-      </section>
-      <section class="tyc">
-        <p>
-          "Como funciona enviar un regalo: El juego" Naty, en tus manos esta nuestro mas sofisticado invento hasta el momento, el Time-Space Bending Reality Alteration Game System. Alias TSBRAG, (pero le decimos Roberto)
-          Por ser tu cumpleaños elegimos darte la posibilidad de ser la piloto de prueba y al mismo tiempo dejar en tus manos el destino de tu propio regalo (Ah re vagos) Una vez que aceptes esto, onda si no lo aceptás no pasa naranja y no te queda otra que hacerlo ( capaz tendríamos que haber pensado mejor esta parte) Procederás a encargarte de que el paquete elaborado con tanto amor por nosotros logre llegar a tus manos a través del tiempo y el espacio desde el domingo 22 a las 18hs. en que lo terminamos, hasta este preciso momento. Si están tocando el timbre ahora, es porque lo hiciste muy bien, a ver a ver, paciencia... Ok, falsa alarma, puede ser que haya un delay, je, hay que ajustar cositas todavía.
-          Pero por ser un prototipo muy alfa todo, solo te dejamos dos opciones a la vez del sin fin de posibilidades, ya que en pruebas anteriores a esta hubo algunos problemas y ahora al parecer hay un multiverso de Comofuncioners entrelazado con el nuestro, pero ese es oootro tema.
-          En fin, como es posible que las cosas salgan mal tenemos un plan de apoyo, nono no te vayas a asustar eh?. Conectamos este sistema con la ya probada (y aun no mejorada) Comofuncioner Time Machine que vendrá en tu ayuda para permitirte volver a un punto anterior de la historia.
-          Esperamos que lo disfrutes, ah y por cierto: Muy Feliz Cumpleaños de parte de tu familia Comofuncioner!!!”
-        </p>
-      </section>
-      <section class="second">
-        <span>Pulsá aceptar para continuar.</span>
-        <form class="ctn">
-          <button class="btn" id="aceptar" type="button">aceptar</button>
-          <button class="btn" id="cancelar" type="button">cancelar</button>
-        </form>
+      <section class="mainA">
+        <section class="first">
+          <img src="logo.svg">
+          <p>Bienvenida al juego<br>de tu natalicio.</p>
+        </section>
+
+        <section class="second">
+          <section class="tyc">
+            <p>
+              "Cómo funciona enviar un regalo: El juego" Naty, en tus manos está nuestro más sofisticado invento hasta el momento: el Time-Space Bending Reality Alteration Game System; alias TSBRAG, (pero le decimos Roberto). Por ser tu cumpleaños, elegimos darte la posibilidad de ser la piloto de prueba y al mismo tiempo dejar en tus manos el destino de tu propio regalo (ah re vagos). Una vez que aceptes esto -onda si no lo aceptás no pasa naranja y no te queda otra que hacerlo (capaz tendríamos que haber pensado mejor esta parte)-procederás a encargarte de que el paquete elaborado con tanto amor por nosotros logre llegar a tus manos a través del tiempo y el espacio, desde el domingo 22 a las 18hs en que lo terminamos, hasta este preciso momento. Si están tocando el timbre ahora, es porque lo hiciste muy bien. A ver a ver, paciencia... Ok, falsa alarma, puede ser que haya un delay, je, hay que ajustar cositas todavía. Pero por ser un prototipo muy alfa todo, solo te dejamos dos opciones a la vez del sin fin de posibilidades, ya que en pruebas anteriores a esta hubo algunos problemas y ahora al parecer hay un multiverso de Comofuncioners entrelazado con el nuestro. Pero ese es oootro tema. En fin, como es posible que las cosas salgan mal tenemos un plan de apoyo. Nono no te vayas a asustar, eh?. Conectamos este sistema con la ya probada (y aun no mejorada) Comofuncioner Time Machine que vendrá en tu ayuda para permitirte volver a un punto anterior de la historia. Esperamos que lo disfrutes. Ah, y por cierto: ¡Muy Feliz Cumpleaños de parte de tu familia Comofuncioner!”
+            </p>
+          </section>
+          <span>Pulsá aceptar para continuar.</span>
+          <form class="ctn">
+            <button class="btn" id="aceptar" type="button">aceptar</button>
+            <button class="btn" id="cancelar" type="button">cancelar</button>
+          </form>
+        </section>
       </section>
     </aside>
-    <img id="backImg">
-    <section class="aven">
-      <article id="mainText">
-        “Finalmente lo hemos logrado, luego de horas y horas de manualidades, charlas filosóficas, sol, mate y muuuucha comida. El regalo de Naty O esta terminado y empaquetado, listo para ser despachado. Pero, ahora viene el problema, quién se lleva este regalo para tomar la ciclopea tarea de lograr que llegue a destino en tiempo y forma?<br>
-        -"Yo puedo pasar por el correo mañana después del trabajo."- Dijo Paula sin dudarlo, siempre tan dispuesta a inmolarse por el equipo.<br>
-        -"Si queres me lo llevo yo, que tengo un correo a la vuelta de casa" - Comentó tímidamente Pato”
-      </article>
-      <form class="ctnO">
-        <button id="btnOpcion1" type="button" value="paula">Darselo a Paula</button>
-        <button id="btnOpcion2" type="button" value="pato">Darselo a Pato</button>
-      </form>
+    <section class="mainB">
+      <img id="backImg">
+      <section class="aven">
+        <article id="mainText">
+          “Finalmente lo hemos logrado, luego de horas y horas de manualidades, charlas filosóficas, sol, mate y muuuucha comida. El regalo de Naty O esta terminado y empaquetado, listo para ser despachado. Pero, ahora viene el problema, quién se lleva este regalo para tomar la ciclopea tarea de lograr que llegue a destino en tiempo y forma?<br>
+          -"Yo puedo pasar por el correo mañana después del trabajo."- Dijo Paula sin dudarlo, siempre tan dispuesta a inmolarse por el equipo.<br>
+          -"Si queres me lo llevo yo, que tengo un correo a la vuelta de casa" - Comentó tímidamente Pato”
+        </article>
+        <form class="ctnO">
+          <button id="btnOpcion1" type="button" value="paula">Darselo a Paula</button>
+          <button id="btnOpcion2" type="button" value="pato">Darselo a Pato</button>
+        </form>
+      </section>
+      <footer>
+        <a href="https://t.me/comosediscutenlascosas">All rights reserved Les Comofuncioners©</a>
+      </footer>
     </section>
-    <footer>
-      <a href="https://t.me/comosediscutenlascosas">All rights reserved Les Comofuncioners©</a>
-    </footer>
 
     <!-- aqui los hidden -->
     <div id='inicio' class='diapositiva hide'>
