--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <section class="second">
           <section class="tyc">
             <p>
-              "Cómo funciona enviar un regalo: El juego" Naty, en tus manos está nuestro más sofisticado invento hasta el momento: el Time-Space Bending Reality Alteration Game System; alias TSBRAG, (pero le decimos Roberto). Por ser tu cumpleaños, elegimos darte la posibilidad de ser la piloto de prueba y al mismo tiempo dejar en tus manos el destino de tu propio regalo (ah re vagos). Una vez que aceptes esto -onda si no lo aceptás no pasa naranja y no te queda otra que hacerlo (capaz tendríamos que haber pensado mejor esta parte)-procederás a encargarte de que el paquete elaborado con tanto amor por nosotros logre llegar a tus manos a través del tiempo y el espacio, desde el domingo 22 a las 18hs en que lo terminamos, hasta este preciso momento. Si están tocando el timbre ahora, es porque lo hiciste muy bien. A ver a ver, paciencia... Ok, falsa alarma, puede ser que haya un delay, je, hay que ajustar cositas todavía. Pero por ser un prototipo muy alfa todo, solo te dejamos dos opciones a la vez del sin fin de posibilidades, ya que en pruebas anteriores a esta hubo algunos problemas y ahora al parecer hay un multiverso de Comofuncioners entrelazado con el nuestro. Pero ese es oootro tema. En fin, como es posible que las cosas salgan mal tenemos un plan de apoyo. Nono no te vayas a asustar, eh?. Conectamos este sistema con la ya probada (y aun no mejorada) Comofuncioner Time Machine que vendrá en tu ayuda para permitirte volver a un punto anterior de la historia. Esperamos que lo disfrutes. Ah, y por cierto: ¡Muy Feliz Cumpleaños de parte de tu familia Comofuncioner!”
+              <b>"Cómo funciona enviar un regalo: El juego"</b> <br>Naty, en tus manos está nuestro más sofisticado invento hasta el momento: el Time-Space Bending Reality Alteration Game System; alias TSBRAG, (pero le decimos Roberto). Por ser tu cumpleaños, elegimos darte la posibilidad de ser la piloto de prueba y al mismo tiempo dejar en tus manos el destino de tu propio regalo (ah re vagos). Una vez que aceptes esto -onda si no lo aceptás no pasa naranja y no te queda otra que hacerlo (capaz tendríamos que haber pensado mejor esta parte)-procederás a encargarte de que el paquete elaborado con tanto amor por nosotros logre llegar a tus manos a través del tiempo y el espacio, desde el domingo 22 a las 18hs en que lo terminamos, hasta este preciso momento. Si están tocando el timbre ahora, es porque lo hiciste muy bien. A ver a ver, paciencia... Ok, falsa alarma, puede ser que haya un delay, je, hay que ajustar cositas todavía. Pero por ser un prototipo muy alfa todo, solo te dejamos dos opciones a la vez del sin fin de posibilidades, ya que en pruebas anteriores a esta hubo algunos problemas y ahora al parecer hay un multiverso de Comofuncioners entrelazado con el nuestro. Pero ese es oootro tema. En fin, como es posible que las cosas salgan mal tenemos un plan de apoyo. Nono no te vayas a asustar, eh?. Conectamos este sistema con la ya probada (y aun no mejorada) Comofuncioner Time Machine que vendrá en tu ayuda para permitirte volver a un punto anterior de la historia. Esperamos que lo disfrutes. Ah, y por cierto: ¡Muy Feliz Cumpleaños de parte de tu familia Comofuncioner!”
             </p>
           </section>
           <span>Pulsá aceptar para continuar.</span>
@@ -51,9 +51,9 @@
     <!-- aqui los hidden -->
     <div id='inicio' class='diapositiva hide'>
       <div class='texto'>
-        “Finalmente lo hemos logrado, luego de horas y horas de manualidades, charlas filosóficas, sol, mate y muuuucha comida. El regalo de Naty O esta terminado y empaquetado, listo para ser despachado. Pero, ahora viene el problema, quien se lleva este regalo para tomar la ciclopea tarea de lograr que llegue a destino en tiempo y forma?
-        - Yo puedo pasar por el correo mañana después del trabajo.- Dijo Paula sin dudarlo, siempre tan dispuesta a inmolarse por el equipo.
-        - Si queres me lo llevo yo, que tengo un correo a la vuelta de casa - Comentó tímidamente Pato”
+        Finalmente lo hemos logrado. Luego de horas y horas de manualidades, charlas filosóficas, sol, mate y muuuucha comida, el regalo de Naty O esta terminado y empaquetado, listo para ser despachado. Pero ahora viene el problema: ¿quién se lleva este regalo para tomar la ciclopea tarea de lograr que llegue a destino en tiempo y forma?<br>
+        -"Yo puedo pasar por el correo mañana después del trabajo."- Dijo Paula sin dudarlo, siempre tan dispuesta a inmolarse por el equipo.<br>
+        -"Si querés me lo llevo yo, que tengo un correo a la vuelta de casa" - Comentó tímidamente Pato”
       </div>
       <div class='opcion1Texto'>Darselo a Paula</div>
       <div class="opcion1Id">paula</div>
@@ -64,12 +64,11 @@
     </div>
     <div id='paula' class='diapositiva hide'>
       <div class='texto'>
-        Luego de conducir por toda la ciudad depositando comofuncioners en la comodidad de sus refugios, llega finalmente a su casa triunfal con el regalo.
-        Sin embargo algo sucede, al entrar a su casa descubrí que la misma ha Sido invadida por visitantes amistosos del vecino país de más allá del charco, lo que es es peor está involucrada en un city tour post laboral que le impedirá cumplir su encargo, pero no desespera sabe que siempre hay un comofuncioner dispuesta a socorrerla así que rápidamente envía un mensaje de texto de auxilio para organizar el plan B
+        Luego de conducir por toda la ciudad depositando comofuncioners en la comodidad de sus refugios, llega finalmente a su casa triunfal con el regalo. Sin embargo, algo sucede. Al entrar a su casa descubre que la misma ha sido invadida por visitantes amistosos del vecino país de más allá del charco; lo que es es peor, está involucrada en un city tour post laboral que le impedirá cumplir su encargo. Pero no desespera. Sabe que siempre hay un comofuncioner dispuesto a socorrerla. Así que rápidamente envía un mensaje de texto de auxilio para organizar el plan B.
       </div>
-      <div class='opcion1Texto'>Envía a Jota </div>
+      <div class='opcion1Texto'> Enviar a Jota </div>
       <div class="opcion1Id">jota</div>
-      <div class="opcion2Texto">Envía a Sebi LD </div>
+      <div class="opcion2Texto"> Enviar a Sebi LD </div>
       <div class="opcion2Id">sebiLD</div>
       <div class="srcName">pau.jpg</div>
       <div class="EsFinal">false</div>
@@ -89,22 +88,22 @@
     </div>
     <div id='jota' class='diapositiva hide'>
       <div class='texto'>
-        Jota se monta en la bicicleta y va por el regalo como si este fuera ET transportado por el niño, mientras deambula por la bici senda recibe un llamado que podría cambiar el rumbo de su día, Pat está necesitando un jugador de urgencia para su mesa esa misma noche. Se detiene a pensar y antes de que pueda tomar una decisión una cara amiga se le acerca en sentido contrario. Se trata de Mili que viene recorriendo la bicisenda en camino a su casa.
+        Jota se monta en la bicicleta y va por el regalo como si este fuera ET transportado por el niño. Mientras deambula por la bicisenda recibe un llamado que podría cambiar el rumbo de su día: Pat está necesitando un jugador de urgencia para su mesa esa misma noche. Se detiene a pensar y antes de que pueda tomar una decisión una cara amiga se le acerca en sentido contrario. Se trata de Mili que viene recorriendo la bicisenda en camino a su casa.
       </div>
-      <div class='opcion1Texto'>Acepta ir a jugar con Pat </div>
+      <div class='opcion1Texto'> Aceptar con Pat </div>
       <div class="opcion1Id">pat</div>
-      <div class="opcion2Texto">Sigue su rumbo junto a Mili </div>
+      <div class="opcion2Texto"> Ir junto a Mili </div>
       <div class="opcion2Id">mili</div>
       <div class="srcName">jota2.jpg</div>
       <div class="EsFinal">false</div>
     </div>
     <div id='sebiLD' class='diapositiva hide'>
       <div class='texto'>
-        Sebi LD aprovecha el Uber que le llevará a su destino para pasar por casa de Paula y tomar el regalo, ya cerraron los correos pero aún es temprano para sus planes. Está rentado de hacer una visita relámpago a Wherever y ver si se cruza con alguien, o ir directo a juntarse con sus amigos con quiénes asistirá a un recital.
+        Sebi LD aprovecha el Uber que le llevará a su destino para pasar por casa de Paula y tomar el regalo. Ya cerraron los correos, pero aún es temprano para sus planes. Está tentado de hacer una visita relámpago a Wherever y ver si se cruza con alguien, o ir directo a juntarse con sus amigos con quiénes asistirá a un recital.
       </div>
-      <div class='opcion1Texto'>Wherever </div>
+      <div class='opcion1Texto'> Wherever </div>
       <div class="opcion1Id">wherever</div>
-      <div class="opcion2Texto">Recital directo</div>
+      <div class="opcion2Texto"> Recital directo </div>
       <div class="opcion2Id">recital</div>
       <div class="srcName">sebasLittleDog2.jpg</div>
       <div class="EsFinal">false</div>
@@ -122,7 +121,7 @@
     </div>
     <div id='pat' class='diapositiva hide'>
       <div class='texto'>
-        Luego de una hermosa jornada de Rol, Pat toma la Posta con el regalo entregado por Jota, ya es de noche y el colectivo tarda en venir, en eso está cuando ve venir una moto muy pegadita al cordón, en la parada acaba de abrir las puertas un 166 que si bien no le deja en su casa, al menos lo acerca en esa misma dirección y luego otro colectivo más adelante podría rectificar el rumbo.
+        Luego de una hermosa jornada de Rol, Pat toma la Posta con el regalo entregado por Jota. Ya es de noche y el colectivo tarda en venir. En eso está cuando ve venir una moto muy pegadita al cordón. En la parada acaba de abrir las puertas un 166 que si bien no le deja en su casa, al menos lo acerca en esa misma dirección, y luego otro colectivo más adelante podría rectificar el rumbo.
       </div>
       <div class='opcion1Texto'>???</div>
       <div class="opcion1Id">???</div>
@@ -133,9 +132,7 @@
     </div>
     <div id='mili' class='diapositiva hide'>
       <div class='texto'>
-        Mili portadora ahora del regalo está llegando a su casa cuando algo le acapara toda su atención, junto a un container de basura se encuentra una verdadera obra de arte para su galería de Mugre-citas.
-Luego de una sesión de fotos de casi una hora advierte que es tarde.
-
+        Mili, portadora ahora del regalo, está llegando a su casa cuando algo le acapara toda su atención. Junto a un container de basura se encuentra una verdadera obra de arte para su galería de Mugre-citas. Luego de una sesión de fotos de casi una hora advierte que es tarde.
       </div>
       <div class='opcion1Texto'>???</div>
       <div class="opcion1Id">???</div>
