--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html>
   <head>
     <link rel="stylesheet" href="reset.css">
@@ -34,7 +34,7 @@
       <img id="backImg">
       <section class="aven">
         <article id="mainText">
-          “Finalmente lo hemos logrado, luego de horas y horas de manualidades, charlas filosóficas, sol, mate y muuuucha comida. El regalo de Naty O esta terminado y empaquetado, listo para ser despachado. Pero, ahora viene el problema, quién se lleva este regalo para tomar la ciclopea tarea de lograr que llegue a destino en tiempo y forma?<br>
+          Finalmente lo hemos logrado, luego de horas y horas de manualidades, charlas filosóficas, sol, mate y muuuucha comida. El regalo de Naty O esta terminado y empaquetado, listo para ser despachado. Pero, ahora viene el problema, quién se lleva este regalo para tomar la ciclopea tarea de lograr que llegue a destino en tiempo y forma?<br>
           -"Yo puedo pasar por el correo mañana después del trabajo."- Dijo Paula sin dudarlo, siempre tan dispuesta a inmolarse por el equipo.<br>
           -"Si queres me lo llevo yo, que tengo un correo a la vuelta de casa" - Comentó tímidamente Pato”
         </article>
@@ -51,9 +51,9 @@
     <!-- aqui los hidden -->
     <div id='inicio' class='diapositiva hide'>
       <div class='texto'>
-        Finalmente lo hemos logrado. Luego de horas y horas de manualidades, charlas filosóficas, sol, mate y muuuucha comida, el regalo de Naty O esta terminado y empaquetado, listo para ser despachado. Pero ahora viene el problema: ¿quién se lleva este regalo para tomar la ciclopea tarea de lograr que llegue a destino en tiempo y forma?<br>
-        -"Yo puedo pasar por el correo mañana después del trabajo."- Dijo Paula sin dudarlo, siempre tan dispuesta a inmolarse por el equipo.<br>
-        -"Si querés me lo llevo yo, que tengo un correo a la vuelta de casa" - Comentó tímidamente Pato”
+        Finalmente lo hemos logrado. Luego de horas y horas de manualidades, charlas filosóficas, sol, mate y muuuucha comida, el regalo de Naty O esta terminado y empaquetado, listo para ser despachado. Pero ahora viene el problema: ¿quién se lleva este regalo para tomar la ciclopea tarea de lograr que llegue a destino en tiempo y forma?
+        <br>-"Yo puedo pasar por el correo mañana después del trabajo."- Dijo Paula sin dudarlo, siempre tan dispuesta a inmolarse por el equipo.
+        <br>-"Si querés me lo llevo yo, que tengo un correo a la vuelta de casa" - Comentó tímidamente Pato”
       </div>
       <div class='opcion1Texto'>Darselo a Paula</div>
       <div class="opcion1Id">paula</div>
