--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <img id="backImg">
       <section class="aven">
         <article id="mainText">
-          Finalmente lo hemos logrado, luego de horas y horas de manualidades, charlas filosóficas, sol, mate y muuuucha comida. El regalo de Naty O esta terminado y empaquetado, listo para ser despachado. Pero, ahora viene el problema, quién se lleva este regalo para tomar la ciclopea tarea de lograr que llegue a destino en tiempo y forma?<br>
+          Finalmente lo hemos logrado. Luego de horas y horas de manualidades, charlas filosóficas, sol, mate y muuuucha comida, el regalo de Naty O esta terminado y empaquetado, listo para ser despachado. Pero ahora viene el problema: ¿quién se lleva este regalo para tomar la ciclopea tarea de lograr que llegue a destino en tiempo y forma?<br>
           -"Yo puedo pasar por el correo mañana después del trabajo."- Dijo Paula sin dudarlo, siempre tan dispuesta a inmolarse por el equipo.<br>
           -"Si queres me lo llevo yo, que tengo un correo a la vuelta de casa" - Comentó tímidamente Pato”
         </article>
@@ -110,7 +110,7 @@
     </div>
     <div id='cony' class='diapositiva hide'>
       <div class='texto'>
-        Cony con el paquete ya en sus manos se dedica a decorarlo con sus últimas creaciones del bello Cefelcito, tiene la plancha de stickers, el preciado paquete y aborda el subte casi vacío, con justo un asiento. La suerte le sonríe y como para coronar la situación de camino a su casa se pone a hablar con les comofucioners que manijeados por el agregado quieren hacer su parte. Jota está dando vueltas cerca de la estación por dónde pronto pasará, podría bajarse y encontrarse para pegar los stickers pero también justo esta Di en CABA por unas horitas aunque tocaría desviarse un poco.
+        Con el paquete ya en sus manos, Cony se dedica a decorarlo con sus últimas creaciones del bello Cefelcito. Tiene la plancha de stickers, el preciado paquete y aborda el subte casi vacío, con justo un asiento. La suerte le sonríe y como para coronar la situación de camino a su casa, se pone a hablar con les comofucioners que, manijeados por el agregado, quieren hacer su parte. Jota está dando vueltas cerca de la estación por dónde pronto pasará, podría bajarse y encontrarse para pegar los stickers, pero también justo esta Di en CABA por unas horitas, aunque tocaría desviarse un poco.
       </div>
       <div class='opcion1Texto'>Se cruza con Jota </div>
       <div class="opcion1Id">jota</div>
