--- a/index.html
+++ b/index.html
@@ -33,20 +33,22 @@
     </aside>
     <section class="mainB">
       <img id="backImg">
-      <section class="aven">
-        <article id="mainText">
-          Finalmente lo hemos logrado. Luego de horas y horas de manualidades, charlas filosóficas, sol, mate y muuuucha comida, el regalo de Naty O esta terminado y empaquetado, listo para ser despachado. Pero ahora viene el problema: ¿quién se lleva este regalo para tomar la ciclopea tarea de lograr que llegue a destino en tiempo y forma?<br>
-          -"Yo puedo pasar por el correo mañana después del trabajo."- Dijo Paula sin dudarlo, siempre tan dispuesta a inmolarse por el equipo.<br>
-          -"Si queres me lo llevo yo, que tengo un correo a la vuelta de casa" - Comentó tímidamente Pato”
-        </article>
-        <form class="ctnO">
-          <button id="btnOpcion1" type="button" value="paula">Darselo a Paula</button>
-          <button id="btnOpcion2" type="button" value="pato">Darselo a Pato</button>
-        </form>
+      <section class="contenedor">
+        <section class="aven">
+          <article id="mainText">
+            Finalmente lo hemos logrado. Luego de horas y horas de manualidades, charlas filosóficas, sol, mate y muuuucha comida, el regalo de Naty O esta terminado y empaquetado, listo para ser despachado. Pero ahora viene el problema: ¿quién se lleva este regalo para tomar la ciclopea tarea de lograr que llegue a destino en tiempo y forma?<br>
+            -"Yo puedo pasar por el correo mañana después del trabajo."- Dijo Paula sin dudarlo, siempre tan dispuesta a inmolarse por el equipo.<br>
+            -"Si queres me lo llevo yo, que tengo un correo a la vuelta de casa" - Comentó tímidamente Pato”
+          </article>
+          <form class="ctnO">
+            <button id="btnOpcion1" type="button" value="paula">Darselo a Paula</button>
+            <button id="btnOpcion2" type="button" value="pato">Darselo a Pato</button>
+          </form>
+        </section>
+        <footer>
+          <a href="https://t.me/comosediscutenlascosas">All rights reserved Les Comofuncioners©</a>
+        </footer>
       </section>
-      <footer>
-        <a href="https://t.me/comosediscutenlascosas">All rights reserved Les Comofuncioners©</a>
-      </footer>
     </section>
 
     <!-- aqui los hidden -->
