--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
           <span>Pulsá aceptar para continuar.</span>
           <form class="ctn">
             <button class="btn" id="aceptar" type="button">aceptar</button>
+            <!-- <button class="btn tercer" type="button">Manteneme apretado</button> -->
             <button class="btn" id="cancelar" type="button">cancelar</button>
-            <button class="btn tercer" type="button">Manteneme apretado</button>
           </form>
         </section>
       </section>
