arreglar a cefelcito que se tomó merca

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <section class="mainA">
         <section class="first">
           <img src="logo.svg">
-          <p>Bienvenida al juego<br>de tu natalicio.</p>
+          <h1>Bienvenida al juego<br>de tu natalicio.</h1>
         </section>
         <section class="second">
           <section class="tyc">
@@ -32,17 +32,18 @@
     <section class="mainB">
       <img id="backImg">
       <section class="contenedor">
-        <section class="aven">
-          <article id="mainText">
-            Finalmente lo hemos logrado. Luego de horas y horas de manualidades, charlas filosóficas, sol, mate y muuuucha comida, el regalo de Naty O esta terminado y empaquetado, listo para ser despachado. Pero ahora viene el problema: ¿quién se lleva este regalo para tomar la ciclopea tarea de lograr que llegue a destino en tiempo y forma?<br>
-            -"Yo puedo pasar por el correo mañana después del trabajo."- Dijo Paula sin dudarlo, siempre tan dispuesta a inmolarse por el equipo.<br>
-            -"Si queres me lo llevo yo, que tengo un correo a la vuelta de casa" - Comentó tímidamente Pato”
-          </article>
-          <form class="ctnO">
-            <button id="btnOpcion1" type="button" value="paula">Darselo a Paula</button>
-            <button id="btnOpcion2" type="button" value="pato">Darselo a Pato</button>
-          </form>
-        </section>
+        <header>
+          <h2>Feliz cumpleaños Naty</h2>
+        </header>
+        <article id="mainText">
+          Finalmente lo hemos logrado. Luego de horas y horas de manualidades, charlas filosóficas, sol, mate y muuuucha comida, el regalo de Naty O esta terminado y empaquetado, listo para ser despachado. Pero ahora viene el problema: ¿quién se lleva este regalo para tomar la ciclopea tarea de lograr que llegue a destino en tiempo y forma?<br>
+          -"Yo puedo pasar por el correo mañana después del trabajo."- Dijo Paula sin dudarlo, siempre tan dispuesta a inmolarse por el equipo.<br>
+          -"Si queres me lo llevo yo, que tengo un correo a la vuelta de casa" - Comentó tímidamente Pato”
+        </article>
+        <form class="ctnO">
+          <button id="btnOpcion1" type="button" value="paula">Darselo a Paula</button>
+          <button id="btnOpcion2" type="button" value="pato">Darselo a Pato</button>
+        </form>
         <footer>
           <a href="https://t.me/comosediscutenlascosas">All rights reserved Les Comofuncioners©</a>
         </footer>
