--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ Simultáneamente, como esas cosas que suceden por casualidad, pero que están í
   <div class="opcion1Id">dani</div>
   <div class="opcion2Texto">END GAME</div>
   <div class="opcion2Id">endGame</div>
-  <div class="srcName">sebaAD.png</div>
+  <div class="srcName">sebaAd.png</div>
   <div class="EsFinal">false</div>
 </div>
   
