Typo en imagen AGAIN FFS

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ Simultáneamente, como esas cosas que suceden por casualidad, pero que están í
   <div class="opcion1Id">paula</div>
   <div class="opcion2Texto">Lo envía a Sebas AD</div>
   <div class="opcion2Id">sebaAd</div>
-  <div class="srcName">rami.jpg</div>
+  <div class="srcName">rami.gif</div>
   <div class="EsFinal">false</div>
 </div>
 
