UNOS FIXES MIRA LOS LOGS

--- a/index.html
+++ b/index.html
@@ -302,8 +302,7 @@ Simultáneamente, como esas cosas que suceden por casualidad, pero que están í
     Lear es un gran rastreador de cosas perdidas, pero grande es la sorpresa de Be cuando este sale corriendo al encuentro de un paquete perdido custodiado por un Ale I absolutamente dormido. Por fortuna, entre las virtudes de la Generala Pingüinesa está la de invocar a los mágicos pingüinos mensajeros, a quienes le entrega el valioso regalo y, tras susurrarle las palabras adecuadas, los despide para que cumplan su misión.
   </div>
   <div class='opcion1Texto'>Pingüinos Mensajeros</div>
-  <div class="opcion1Id">rama
-  </div>
+  <div class="opcion1Id">rama</div>
   <div class="opcion2Texto">Pingüinos Mensajeros</div>
   <div class="opcion2Id">jake</div>
   <div class="srcName">be2.jpg</div>
@@ -452,7 +451,7 @@ Simultáneamente, como esas cosas que suceden por casualidad, pero que están í
 
 <div  id='endGame' class='diapositiva hide'>
   <div class='texto'>
-    inalmente el día ha llegado. Les Comofuncioners hemos intentado de todas las formas posibles que tu regalo se reúna contigo pero, aunque no nos guste admitirlo, parece que aún no hemos aprendido bien a manejar esta extraña tecnología. Por eso te estamos esperando en la plaza, con los mates, nuestros abrazos y sonrisas para entregarte este preciado paquete, que seguirá sumando kilometraje, y posiblemente ese sea su mágico poder: el de llevarte más allá de donde estés cada vez que le mires y también el de estar cargado de no solo una pequeña y lineal historia, sino de un sin fin de posibilidades, vivencias y personajes, ahora y para siempre.
+    Finalmente el día ha llegado. Les Comofuncioners hemos intentado de todas las formas posibles que tu regalo se reúna contigo pero, aunque no nos guste admitirlo, parece que aún no hemos aprendido bien a manejar esta extraña tecnología. Por eso te estamos esperando en la plaza, con los mates, nuestros abrazos y sonrisas para entregarte este preciado paquete, que seguirá sumando kilometraje, y posiblemente ese sea su mágico poder: el de llevarte más allá de donde estés cada vez que le mires y también el de estar cargado de no solo una pequeña y lineal historia, sino de un sin fin de posibilidades, vivencias y personajes, ahora y para siempre.
     ¡FELIZ CUMPLEAÑOS, NATY!
     Este no es el fin, ya que lo mejor está por venir, nos vemos en Buenos Aires.
 
