UNOS FIXES MIRA LOS LOGS2 : LA VENGANZA DEL COMMIT

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ Simultáneamente, como esas cosas que suceden por casualidad, pero que están í
   <div class="opcion1Id">be</div>
   <div class="opcion2Texto">Meli lo intercepta</div>
   <div class="opcion2Id">meli</div>
-  <div class="srcName">meli2.jpg</div>
+  <div class="srcName">di2.jpg</div>
   <div class="EsFinal">false</div>
 </div>
   
