--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@ Simultáneamente, como esas cosas que suceden por casualidad, pero que están í
   
   <div  id='di' class='diapositiva hide'>
   <div class='texto'>
-    Di regresa a su hogar después de haber llevado de paseo el paquete, que a esta altura tiene casi tantos kilómetros encima que los que lo separan de los brazos de su destinataria. Unos minutos más y unos cuantos metros por el bosque no le iban a afectar al regalo de Naty, por lo que de camino a su casa se entretuvo, cual Caperucita Roja, en pasear por la arboleda de la ciudad de las diagonales. En sus auriculares sonaba Catch Fire de Periphery
-    https://open.spotify.com/track/7wxD9h1hnFJTgRMhtHvw2U?si=c8ZXVfJ9TXSUP_Onghyemg y entonces se deja llevar por la sinfonía mientras recorre la arboleda.
+    Di regresa a su hogar después de haber llevado de paseo el paquete, que a esta altura tiene casi tantos kilómetros encima que los que lo separan de los brazos de su destinataria. Unos minutos más y unos cuantos metros por el bosque no le iban a afectar al regalo de Naty, por lo que de camino a su casa se entretuvo, cual Caperucita Roja, en pasear por la arboleda de la ciudad de las diagonales. En sus auriculares sonaba <a href="https://open.spotify.com/track/7wxD9h1hnFJTgRMhtHvw2U?si=c8ZXVfJ9TXSUP_Onghyemg">Catch Fire de Periphery </a>
+    y entonces se deja llevar por la sinfonía mientras recorre la arboleda.
     Unas horas después se encuentra en su casa pero cae en la cuenta que le falta algo importante y esto es el regalo de Naty; no recuerda si lo tenia en el bosque o no, por lo que recurre a Bebesita para que en su ronda nocturna rastree el mismo en el bosque, y a Meli para que haga lo propio por las estaciones del tren Roca
 
   </div>
