--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </section>
         <section class="second">
           <section class="tyc">
-            <br>Ah, y por cierto: ¡Muy Feliz Cumpleaños de parte de tu familia Comofuncioner!
+            <i>Ah, y por cierto: ¡Muy Feliz Cumpleaños de parte de tu familia Comofuncioner!</i>
             <b>"Cómo Funciona Enviar un Regalo: El juego"</b><br> Naty, en tus manos está nuestro más sofisticado invento hecho hasta el momento: el <i>Time-Space Bending Reality Alteration Game System.</i> Alias TSBRAGS (pero le decimos Roberto).
 Por ser tu cumpleaños, elegimos darte la posibilidad de ser la piloto de prueba y, al mismo tiempo, dejar en tus manos el destino de tu propio regalo. (Ah, re vagos). Una vez que aceptes esto, -onda: si no lo aceptás, no pasa naranja, aunque no te queda otra que hacerlo (capaz tendríamos que haber pensado mejor esta parte)- procederás a encargarte de que el paquete elaborado con tanto amor por nosotres logre llegar a tus manos a través del tiempo y el espacio desde el domingo 22 a las 18hs, cuando lo terminamos, hasta este preciso momento. Si están tocando el timbre ahora, es porque lo hiciste muy bien. A ver a ver, paciencia... Ok, falsa alarma, puede ser que haya un delay, je, hay que ajustar cositas todavía.
 Pero por ser un prototipo muy alfa todo, solo te dejamos dos opciones a la vez, del sinfín de posibilidades, ya que en pruebas anteriores a esta hubo algunos problemas y ahora al parecer, hay un multiverso de Comofuncioners entrelazado con el nuestro (pero ese es oootro tema).
@@ -178,8 +178,8 @@ Simultáneamente, como esas cosas que suceden por casualidad, pero que están í
   
   <div  id='di' class='diapositiva hide'>
   <div class='texto'>
-    Di regresa a su hogar después de haber llevado de paseo el paquete, que a esta altura tiene casi tantos kilómetros encima que los que lo separan de los brazos de su destinataria. Unos minutos más y unos cuantos metros por el bosque no le iban a afectar al regalo de Naty, por lo que de camino a su casa se entretuvo, cual Caperucita Roja, en pasear por la arboleda de la ciudad de las diagonales. En sus auriculares sonaba <a href="https://open.spotify.com/track/7wxD9h1hnFJTgRMhtHvw2U?si=c8ZXVfJ9TXSUP_Onghyemg">Catch Fire de Periphery </a>
-    y entonces se deja llevar por la sinfonía mientras recorre la arboleda.
+    Di regresa a su hogar después de haber llevado de paseo el paquete, que a esta altura tiene casi tantos kilómetros encima que los que lo separan de los brazos de su destinataria. Unos minutos más y unos cuantos metros por el bosque no le iban a afectar al regalo de Naty, por lo que de camino a su casa se entretuvo, cual Caperucita Roja, en pasear por la arboleda de la ciudad de las diagonales. En sus auriculares sonaba <a href="https://open.spotify.com/track/7wxD9h1hnFJTgRMhtHvw2U?si=c8ZXVfJ9TXSUP_Onghyemg">Catch Fire de Periphery</a>
+     y entonces se deja llevar por la sinfonía mientras recorre la arboleda.
     Unas horas después se encuentra en su casa pero cae en la cuenta que le falta algo importante y esto es el regalo de Naty; no recuerda si lo tenia en el bosque o no, por lo que recurre a Bebesita para que en su ronda nocturna rastree el mismo en el bosque, y a Meli para que haga lo propio por las estaciones del tren Roca
 
   </div>
